--- a/gb/16/7/24/n8132511.md
+++ b/gb/16/7/24/n8132511.md
@@ -1,14 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kpywf293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kpywf293/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kpywf293/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kpywf293/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kpywf293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kpywf293/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kpywf293/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kpywf293/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kpywf293/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kpywf293/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kpywf293/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kpywf293/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kpywf293/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kpywf293/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kpywf293/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kpywf293/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kpywf293/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kpywf293/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kpywf293/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kpywf293/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kpywf293/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kpywf293/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共高层在香港博弈 江派部署破坏舞蹈大赛</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2016/03/1410120045292100-600x400.jpg" />
-<h6>图为2014年10月11日，52名来自世界各地的第六届“全世界中国舞舞蹈大赛”入围复赛选手，在纽约曼哈顿社区学院翠柏卡表演艺术中心再次展开竞技。（爱德华／大纪元）
-</h6>
+
+<h6></h6>
 <hr>
-	<p>【大纪元2016年07月24日讯】（大纪元记者骆亚采访报导）近日，<ahref="https://github.com/kpywf293/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">香港</a>的<ahref="https://github.com/kpywf293/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88%E5%A4%A7%E8%B5%9B.md#1">舞蹈大赛</a>场地不断遭到<ahref="https://github.com/kpywf293/djy/blob/master/gb/tag/%E9%AA%9A%E6%89%B0.md#1">骚扰</a>，冒出青关会同样性质的组织在场外连日悬挂展板、并以所谓的图片展、签名活动，污蔑围攻法轮功团体。</p>
-<figure id="attachment_8134278" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-8134278" src="https://i.epochtimes.com/assets/uploads/2016/07/666-1-450x300.jpg" alt="7月23日，中共外围组织青关会用大喇叭在新唐人举办的“全世界中国古典舞大赛”亚太区初赛场馆——麦花臣场馆外播放录音、悬挂展板及横幅，滋扰附近居民及前来买票的市民（左）；南海仲裁事件引发大陆民间“爱国”者呼吁抵制美国等商品。河北、湖南等地出现“民众”围堵连锁食品店肯德基，怒骂光顾的食客不爱国（右）。（大纪元合成图）" width="450" b="300" /><figcaption class="wp-caption-text">7月23日，中共外围组织青关会用大喇叭在新唐人举办的“全世界中国古典舞大赛”亚太区初赛场馆——麦花臣场馆外播放录音、悬挂展板及横幅，滋扰附近居民及前来买票的市民（左）；南海仲裁事件引发大陆民间“爱国”者呼吁抵制美国等商品。河北、湖南等地出现“民众”围堵连锁食品店肯德基，怒骂光顾的食客不爱国（右）。（大纪元合成图）</figcaption></figure>
-<p>目前中共党魁<ahref="https://github.com/kpywf293/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>和其儿子被软禁的消息流传甚广，常年揭露江泽民上海帮问题的郑恩宠近日突被官方待为上宾。而中央巡视组进驻江曾常年经营的港澳办进一步清理其势力。有分析认为，习江两派的博弈已到了尾声，新唐人<ahref="https://github.com/kpywf293/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88%E5%A4%A7%E8%B5%9B.md#1">舞蹈大赛</a>成为的他们在<ahref="https://github.com/kpywf293/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">香港</a>角力的爆破点，折射出中国整个局势的焦点。</p>
+	<p>【大纪元2016年07月24日讯】（大纪元记者骆亚采访报导）近日，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">香港</a>的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88%E5%A4%A7%E8%B5%9B.md#1">舞蹈大赛</a>场地不断遭到<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%AA%9A%E6%89%B0.md#1">骚扰</a>，冒出青关会同样性质的组织在场外连日悬挂展板、并以所谓的图片展、签名活动，污蔑围攻法轮功团体。</p>
+<figure id="attachment_8134278" aria-describedby="caption-attachment-8134278" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/07/666-1-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-8134278" src="https://i.epochtimes.com/assets/uploads/2016/07/666-1-450x300.jpg" alt="7月23日，中共外围组织青关会用大喇叭在新唐人举办的“全世界中国古典舞大赛”亚太区初赛场馆——麦花臣场馆外播放录音、悬挂展板及横幅，滋扰附近居民及前来买票的市民（左）；南海仲裁事件引发大陆民间“爱国”者呼吁抵制美国等商品。河北、湖南等地出现“民众”围堵连锁食品店肯德基，怒骂光顾的食客不爱国（右）。（大纪元合成图）" width="450" b="300" /></a><figcaption id="caption-attachment-8134278" class="wp-caption-text">7月23日，中共外围组织青关会用大喇叭在新唐人举办的“全世界中国古典舞大赛”亚太区初赛场馆——麦花臣场馆外播放录音、悬挂展板及横幅，滋扰附近居民及前来买票的市民（左）；南海仲裁事件引发大陆民间“爱国”者呼吁抵制美国等商品。河北、湖南等地出现“民众”围堵连锁食品店肯德基，怒骂光顾的食客不爱国（右）。（大纪元合成图）</figcaption></figure>
+<p>目前中共党魁<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>和其儿子被软禁的消息流传甚广，常年揭露江泽民上海帮问题的郑恩宠近日突被官方待为上宾。而中央巡视组进驻江曾常年经营的港澳办进一步清理其势力。有分析认为，习江两派的博弈已到了尾声，新唐人<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88%E5%A4%A7%E8%B5%9B.md#1">舞蹈大赛</a>成为的他们在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">香港</a>角力的爆破点，折射出中国整个局势的焦点。</p>
 <h3>滋扰新唐人舞蹈大赛 破坏舞蹈大赛场地</h3>
 <p>香港的新唐人舞蹈大赛新场地麦花臣场馆外，自7月18日以来，突然冒出一个“香港民意交流协会”（简称：民交协），天天挂出展板，甚至还在场馆旁搞所谓的反X教图片展，污蔑法轮功团体。</p>
 <p>民交协还高调召开记者会并举行开幕式，宣称要在香港多个地点举办类似的图片展及反法轮功签名活动。</p>
@@ -19,7 +18,7 @@
 <p>“青关会”，成立于2012年6月8日。总部设在美国的追查迫害法轮功国际组织于同年8月7日发出通告，青关会是“中共反X教协会”和中共政法委在香港的一个分支，这个所谓的关爱协会以民间的身份来出现，但实际上是为官方做事的组织，政法委610下属的具体做事的机构。</p>
 <p>追查国际组织发言人汪志远指出，中共反X教协会成立于2000年11月13日，是中共政法委旗下的610系统办的，是中共迫害法轮功最邪恶最残酷的部分。主要的反法轮功活动包括大规模绑架社会的强制签名活动，将谎言带入校园、欺骗学生，全国巡回展览等。</p>
 <p>由于其名声太臭，所以中共就在香港以青关会、民交协、慈爱协会等其它名称团体出现，实质上是换汤不换药，执行的是中共610系统命令，根本它是中共迫害法轮功的打手。</p>
-<p>1999年6月10日，<ahref="https://github.com/kpywf293/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>避开宪法和正常的法律程序在中共中央成立了一个专职镇压法轮功的非法机构——“中共中央处理法轮功问题领导小组”，下设办公室，也称“610办公室”类似于中共文革时期的文革小组，通过政法委控制中共的公检法、国安、武警系统，还可以随时调动外交、教育、司法、卫生等资源，实际上是另一个中央权力中心。</p>
+<p>1999年6月10日，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>避开宪法和正常的法律程序在中共中央成立了一个专职镇压法轮功的非法机构——“中共中央处理法轮功问题领导小组”，下设办公室，也称“610办公室”类似于中共文革时期的文革小组，通过政法委控制中共的公检法、国安、武警系统，还可以随时调动外交、教育、司法、卫生等资源，实际上是另一个中央权力中心。</p>
 <p>各省市级的610主任，通常是同级政法委书记或副书记。</p>
 <h3>中共610三个头目都被抓 巡视组巡视610</h3>
 <p>2016年4月16日，中纪委官网消息，中共河北省委常委、政法委书记张越涉嫌“严重违纪”，目前正被调查。</p>
@@ -31,46 +30,45 @@
 <p>近日上海维权律师郑恩宠与夫人被警方带走五天，并待为上宾，许诺将还其自由。郑恩宠表示官方突然转向，除江泽民家族出问题之外，跟目前大环境变化也有关。</p>
 <h3>巡视组进驻港澳办 澳门中联办主任李刚卸任返京</h3>
 <p>中纪委宣布巡视610同时，还包括国务院港澳事务办公室党组和港澳基本法委员会。</p>
-<p>中共党史研究专家、原军事院校出版社社长辛子陵表示，江派二号人物曾庆红在任中共国家副主席期间，一直负责港澳办，在港澳系统有很大势力范围。目前<ahref="https://github.com/kpywf293/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>当局在全方位深入清理江泽民派系的情况下，向港澳办派驻巡视组，就是要肃清江派势力在香港的影响，针对的主要目标正是曾庆红。</p>
+<p>中共党史研究专家、原军事院校出版社社长辛子陵表示，江派二号人物曾庆红在任中共国家副主席期间，一直负责港澳办，在港澳系统有很大势力范围。目前<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>当局在全方位深入清理江泽民派系的情况下，向港澳办派驻巡视组，就是要肃清江派势力在香港的影响，针对的主要目标正是曾庆红。</p>
 <p>7月19日中共官方公布，王志民为澳门中联办主任，原主任李刚卸任返京，出任侨务办公室副主任。</p>
 <p>中国问题专家季达分析，现年61岁的李刚此次突然被调回北京任国务院侨办副主任，从部门一把手转任虚职，贬意明显。现在中央巡视组已经进驻港澳办开始清理，直逼香港中联办主任张晓明，特首梁振英。</p>
-<p>季达表示，舞蹈大赛第一个场地被取消了与张晓敏和梁振英有关。目前中南海两派激烈的博弈，以香港作为轴心，选择舞蹈大赛作为爆破点。现在这个舞蹈大赛已不仅仅是舞蹈大赛，折射出中国整个局势的聚焦点。<ahref="https://github.com/kpywf293/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>围剿江派，但江派残余势力利用香港来负隅顽抗。拿香港一国二制来做赌注，不惜破坏香港整个环境来做赌注来做这个事情。#</p>
+<p>季达表示，舞蹈大赛第一个场地被取消了与张晓敏和梁振英有关。目前中南海两派激烈的博弈，以香港作为轴心，选择舞蹈大赛作为爆破点。现在这个舞蹈大赛已不仅仅是舞蹈大赛，折射出中国整个局势的聚焦点。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>围剿江派，但江派残余势力利用香港来负隅顽抗。拿香港一国二制来做赌注，不惜破坏香港整个环境来做赌注来做这个事情。#</p>
 <p>责任编辑：林诗远</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/12/8/17/n3661259.md#1">舞蹈大赛在即 大陆各界名人恭贺</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/16/6/23/n8029577.md#1">港府干预 新唐人舞蹈大赛赛场合同被取消</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/16/6/24/n8031590.md#1">梁振英连任无望最后一拼 舞蹈大赛场地毁约</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/16/6/24/n8032224.md#1">李天笑：香港舞蹈大赛被毁约背后高层博弈</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/8/17/n3661259.md#1">舞蹈大赛在即 大陆各界名人恭贺</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/6/23/n8029577.md#1">港府干预 新唐人舞蹈大赛赛场合同被取消</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/6/24/n8031590.md#1">梁振英连任无望最后一拼 舞蹈大赛场地毁约</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/6/24/n8032224.md#1">李天笑：香港舞蹈大赛被毁约背后高层博弈</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11275879.md#1" target="_blank">林辉：中共对三千印度战俘进行红色洗脑</a></li><li><a href="https://github.com/kpywf293/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555095.md#1" target="_blank">这条命是法轮功给的</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11208799.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇（5）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242880.md#1" target="_blank">美加政要褒奖法轮大法 宣布大法日大法月</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/3/26/n11977635.md#1">美发言人回击华春莹：习总书记讲媒体姓党</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/3/25/n11974512.md#1">【新闻看点】习将出席G20峰会 国际问责不断</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/3/26/n11977140.md#1">台湾确诊者多轻症但住院久 张上淳解密</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/3/26/n11975414.md#1">大陆知情医生：中共病毒只能靠自愈</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/3/26/n11977926.md#1">四川公民赵凯公开呼吁“解散共产党”</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/3/26/n11976245.md#1">墨西哥男子居家隔离 派小狗去买零食</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/3/24/n11971575.md#1">宣传新片时自称亚裔 刘亦菲遭大陆网民骂翻</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/3/25/n11974278.md#1">与高圆圆携女抵上海 赵又廷复工前被强制隔离</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】上帝之鞭：欧洲黑死病</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/3/24/n11970004.md#1">老僧从冥府归来 传信给行恶的官员们</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/3/25/n11974130.md#1">张昆仑：大艺通天</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/13/2/3/n3792263.md#1">米开朗基罗（2） 成名作《圣殇》</a></li>
-<li><a href="https://github.com/kpywf293/djy/blob/master/gb/20/3/18/n11950234.md#1">拥28个博士学位 推展传统舞蹈的黄埔名将何志浩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kpywf293/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kpywf293/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/7/24/n8132511.htm">中共高层在香港博弈 江派部署破坏舞蹈大赛</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/7/24/n8132511.htm">中共高层在香港博弈 江派部署破坏舞蹈大赛</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kpywf293/djy/blob/master/gb/16/7/24/n8132511.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kpywf293/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kpywf293/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kpywf293/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kpywf293/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kpywf293/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/16/7/24/n8132511.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
